prevent overflow on canvas

--- a/plottable.css
+++ b/plottable.css
@@ -89,6 +89,12 @@
   overflow: visible;
 }
 
+.plottable .plot-canvas-container {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .plottable .plot-canvas {
   width: 100%;
   height: 100%;
